# minizip

./: Android.mk  CMakeLists.txt  LICENSE  README.md
include/: miniunz.h  miniz.h
src/: miniunz.c  minizip.c
test/: main.cpp
